<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addMeals.AddMealsActivity">

    <ProgressBar
        android:id="@+id/pbWaitFoodData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"
        android:indeterminateTint="?colorPrimary">
    </ProgressBar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/cvSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btBackToMeals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_back_to_show_meals_button"
            android:backgroundTint="?android:windowBackground"
            android:contentDescription="@string/description_back_button_icon"
            android:src="@drawable/arrow_back_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/spChooseMeals"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spChooseMeals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_spinner_choose_meals"
            app:endIconMode="dropdown_menu"
            app:endIconTint="?colorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btBackToMeals"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/acvChooseMeals"
                style="@style/chooseMealDropDownStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:windowBackground"
                android:inputType="none"
                android:labelFor="@id/spChooseMeals"
                tools:text="Завтрак" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_search_field"
        app:cardCornerRadius="@dimen/searchFieldRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clHead"
        app:strokeColor="@color/search_field_stroke_color"
        app:strokeWidth="@dimen/search_field_border_width">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_search_field">

            <ImageView
                android:id="@+id/ivSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_image_in_search_field"
                android:contentDescription="@string/description_search_icon"
                android:src="@drawable/search_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/edSearch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/edSearch"
                style="@style/searchFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_search_text_field"
                android:layout_marginEnd="@dimen/margin_end_search_text_field"
                android:background="@null"
                android:hint="@string/search_hint"
                android:inputType="text"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/ibClear"
                app:layout_constraintStart_toEndOf="@id/ivSearch"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ibClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end_clear_bt"
                android:background="?colorSurfaceContainer"
                android:contentDescription="@string/description_clear_search_field_icon"
                android:src="@drawable/close_icon"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/edSearch"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <View
        android:id="@+id/separatorView"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/margin_top_separator"
        android:background="?android:textColorSecondary"
        app:layout_constraintBottom_toTopOf="@id/rvAddMeals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvSearch" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAddMeals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_add_meal_rv"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separatorView" />


</androidx.constraintlayout.widget.ConstraintLayout>